test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_writeln_expr.draco
proc main() void : a := writeln(a); corp;
