test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_dim_as_identifier.draco
int dim;
 
proc main() void : a := 1; corp;
